--- a/restaurants-service/restaurants-caller/src/main/resources/application.yml
+++ b/restaurants-service/restaurants-caller/src/main/resources/application.yml
@@ -7,5 +7,7 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8762/eureka/
 
+spring.cloud.config.uri: http://localhost:8888
+
 server:
   port: 9000
