--- a/configuration/restaurants-caller.yml
+++ b/configuration/restaurants-caller.yml
@@ -1,1 +1,2 @@
-caller.restaurant.name: Brunos On The Boulevard
+#caller.restaurant.name: Brunos On The Boulevard
+caller.restaurant.name: Morris Park Bake Shop
