--- a/configuration/restaurants-caller.yml
+++ b/configuration/restaurants-caller.yml
@@ -1,2 +1,2 @@
-#caller.restaurant.name: Brunos On The Boulevard
-caller.restaurant.name: Morris Park Bake Shop
+caller.restaurant.name: Brunos On The Boulevard
+#caller.restaurant.name: Morris Park Bake Shop
