--- a/restaurants-service/restaurants-caller/build.gradle
+++ b/restaurants-service/restaurants-caller/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'org.springframework.boot'
 
 jar {
     baseName = 'restaurants-caller'
-    version = '0.1.0'
+    version = ''
 }
 
 buildscript {
@@ -16,14 +16,16 @@ buildscript {
 
 dependencyManagement {
     imports {
-        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Edgware.RELEASE'
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:Edgware.SR1"
+        mavenBom "io.pivotal.spring.cloud:spring-cloud-services-dependencies:1.6.1.RELEASE"
     }
 }
 
 dependencies {
     compile project(':restaurants-client')
     compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.springframework.cloud:spring-cloud-starter-eureka')
+    compile("io.pivotal.spring.cloud:spring-cloud-services-starter-service-registry")
+    compile("io.pivotal.spring.cloud:spring-cloud-services-starter-config-client")
     compile('org.springframework.cloud:spring-cloud-starter-feign')
     compile('org.springframework.cloud:spring-cloud-starter-config')
     compile('org.springframework.boot:spring-boot-starter-actuator')
