--- a/restaurants-service/restaurants-caller/src/main/resources/application.yml
+++ b/restaurants-service/restaurants-caller/src/main/resources/application.yml
@@ -2,14 +2,8 @@ spring:
   application:
     name: restaurants-caller
 
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8762/eureka/
-
-spring.cloud.config.uri: http://localhost:8888
-
 management.security.enabled: false
 
-server:
-  port: 9000
+security:
+  basic:
+    enabled: false
